# llm-api-calls

./: .gitignore  README.md  apis.env  assess_studies.py  pyproject.toml
assets/aorta/: normal_size_anatomy.json  normal_size_anatomy_example.json  segmentation_template_example.json
llm_data_extractor/: __init__.py  api_calls.py  assets.py  io.py  providers.py
llm_data_extractor/assets/: prompt.jnj
llm_data_extractor/assets/aorta/: normal_size_anatomy.json  normal_size_anatomy_example.json  segmentation_template.json  segmentation_template_example.json
notebooks/: test_api_calls.ipynb
