[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm_data_extractor"
version = "0.1.0"
authors = [
  { name = "Anvar Kurmukov", email = "your.email@example.com" },
]
description = "A Python library for extracting structured data from LLM APIs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anthropic>=0.3.0",
]

[project.urls]
"Homepage" = "https://github.com/kurmukovai/llm-api-calls"
